@@ -1090,6 +1090,7 @@ static SyscallTableEntry syscall_main_table[] = {
    //..
    LINXY (__NR_clock_adjtime,          sys_clock_adjtime),           // 341
    LINX_ (__NR_syncfs,                 sys_syncfs),                  // 342
+   LINX_ (__NR_setns,                  sys_setns),                   // 343
    //..
    LINXY (__NR_process_vm_readv,       sys_process_vm_readv),        // 345
    LINX_ (__NR_process_vm_writev,      sys_process_vm_writev),       // 346
